--- a/IconGame/app/src/main/AndroidManifest.xml
+++ b/IconGame/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
+        <activity android:name=".PreferenceActivity" />
+        <activity android:name=".MyPreferenceActivity"></activity>
     </application>
 
 </manifest>
