Ajout de l'activité de fin de partie + modification mineure des vues
Modification des vues afin qu'elles respectent la même cohérence
graphique

--- a/IconGame/app/src/main/AndroidManifest.xml
+++ b/IconGame/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".MyPreferenceActivity" />
         <activity android:name=".dwActivity" />
         <activity android:name=".pkmActivity" />
-        <activity android:name=".mlpActivity"></activity>
+        <activity android:name=".mlpActivity" />
+        <activity android:name=".FinishActivity"></activity>
     </application>
 
 </manifest>
