--- a/IconGame/app/build.gradle
+++ b/IconGame/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'io.realm:realm-android:0.85.1'
     testCompile 'junit:junit:4.12'
 }
